# yang-push-key

./: Cargo.toml  README.md
assets/docs/: topic-name-algorithm.md
assets/testdata/: if_leaf.xml  if_multi.xml  if_single.xml  ni_multi.xml  ni_single.xml  p1_composite.xml  p1_container.xml  p1_container_leaf.xml  p1_content.xml  p1_content_both_levels.xml  p1_content_multi_sel.xml  p1_content_nested.xml  p1_dedup.xml  p1_deep.xml  p1_dns_server.xml  p1_entire_container.xml  p1_filter.xml  p1_mixed_leaf_container.xml  p1_multi_leaves.xml  p1_multi_modules.xml  p1_multi_top.xml  p1_pipeline.xml  p1_quote.xml  p1_sibling_leaves.xml  p1_simple.xml  p1_slash_value.xml  p1_three_leaves.xml  p1_whitespace.xml  routes_single.xml  sys_clock.xml  sys_dns.xml
assets/testdata/expected/: p1_composite.xpath  p1_container.xpath  p1_container_leaf.xpath  p1_content.xpath  p1_content_both_levels.xpath  p1_content_multi_sel.xpath  p1_content_nested.xpath  p1_dedup.xpath  p1_deep.xpath  p1_dns_server.xpath  p1_entire_container.xpath  p1_mixed_leaf_container.xpath  p1_multi_leaves.xpath  p1_multi_modules.xpath  p1_multi_top.xpath  p1_quote.xpath  p1_sibling_leaves.xpath  p1_slash_value.xpath  p1_three_leaves.xpath  p1_to_p2_to_p3.key  (+37 more)
assets/yang/: example-acl.yang  example-deep.yang  example-network.yang  example-routes.yang  example-vlans.yang  ietf-interfaces.yang  ietf-system.yang  yang-library-interfaces.xml
src/: lib.rs  main.rs  phase1.rs  phase2.rs  phase3.rs  topic.rs  types.rs  xpath.rs
tests/: common.rs  phase1.rs  phase2.rs  phase3.rs  pipeline.rs  topic.rs
